--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site Info
-title:              "The Plain"
-description:        "A minimalist Jekyll theme"
-author_name:        "Heiswayi Nrird" # change this to your name
-logo_url:           https://avatars0.githubusercontent.com/u/13794983?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
+title:              "QYJ"
+description:        "学习日志"
+author_name:        "QYJ" # change this to your name
+logo_url:           https://avatars.githubusercontent.com/u/25941674?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
 url:                https://xzqyj.github.io # main url
-baseurl:            /the-plain
+baseurl:            
 permalink:          /:title # Post permalink
 timezone:           Asia/Kuala_Lumpur # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
