--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Info
-title:              "QYJ"
+title:              "The Plain"
 description:        "学习日志"
 author_name:        "QYJ" # change this to your name
 logo_url:           https://avatars.githubusercontent.com/u/25941674?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
